--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.2.1",
     "express": "^4.16.4",
+    "i": "^0.3.6",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.8",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-icons-kit": "^1.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-spring": "^7.2.10",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
